--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
@@ -51,6 +51,9 @@
                 </MTextField>
             </MCardText>
             <MCardActions Class="pt-0">
+                <MButton Text="true" OnClick="OnReset">
+                    <wc-auto-scroll-text fit-content="true" style="max-width:100px;">@(I18n.T("Restore the default"))</wc-auto-scroll-text>
+                </MButton>
                 <MSpacer></MSpacer>
                 <MButton Text="true" OnClick="HandleOnCancel">
                     @(I18n.T("Cancel"))
