🐛 fix: A brief blank space on the page upon return

--- a/src/SwashbucklerDiary.Rcl/Components/PageCacheContainer/PageCacheContainer.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/PageCacheContainer/PageCacheContainer.razor
@@ -1,7 +1,8 @@
 @namespace SwashbucklerDiary.Rcl.Components
 @inherits MyComponentBase
 
-<CustomPPageContainer @ref="pPageContainer"
-                      PageUpdate="NavigateController.AllowPageUpdate">
+<PPageContainerReplacement @ref="pPageContainerReplacement"
+                           PageUpdate="NavigateController.AllowPageUpdate"
+                           OnLocationChanged="HandlePageCacheUpdate">
     @ChildContent
-</CustomPPageContainer>
+</PPageContainerReplacement>
