--- a/src/SwashbucklerDiary.Rcl/Components/SettingSwitch/SettingSwitch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/SettingSwitch/SettingSwitch.razor
@@ -6,7 +6,7 @@
          OnChange="HandleOnChange"
          Dense="true"
          Inset="true"
-         Color="@null">
+         Color="@MasaBlazor.Theme.CurrentTheme.OnSurface">
 </MSwitch>
 
 
