--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/AppLockSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/AppLockSetting.razor
@@ -26,7 +26,7 @@
                              Readonly
                              Dense="true"
                              Inset="true"
-                             Color="@null"
+                             Color="@MasaBlazor.Theme.CurrentTheme.OnSurface"
                              OnClick="()=>showNumberLock=true">
                     </MSwitch>
                 </MListItemAction>
@@ -51,7 +51,7 @@
                                  Readonly
                                  Dense="true"
                                  Inset="true"
-                                 Color="@null"
+                                 Color="@MasaBlazor.Theme.CurrentTheme.OnSurface"
                                  OnClick="SetAppLockBiometricAsync">
                         </MSwitch>
                     </MListItemAction>
