--- a/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
@@ -87,7 +87,7 @@
                                  OnClick="SwitchHidePrivacyModeEntrance"
                                  Dense="true"
                                  Inset="true"
-                                 Color="@null">
+                                 Color="@MasaBlazor.Theme.CurrentTheme.OnSurface">
                         </MSwitch>
                     </MListItemAction>
                 </MListItem>
