--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/PatternPasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/PatternPasswordDialog.razor
@@ -7,7 +7,8 @@
                Fullscreen="true"
                Eager
                Transition=""
-               OnBeforeShowContent="HandleOnBeforeShowContent">
+               OnBeforeShowContent="HandleOnBeforeShowContent"
+               OnAfterShowContent="HandleOnAfterShowContent">
     <MyAppBar OnClick="HandleOnCancel">
     </MyAppBar>
 
@@ -15,12 +16,13 @@
         <div class="d-flex justify-center align-center" style="width:100%;height:100%;">
             <div class="d-flex justify-center scroll-show" style="width:100%;max-height:100%;overflow:auto;">
                 <div style="width:100%;height:fit-content;">
-                    <NumberLock Title="@I18n.T(string.IsNullOrEmpty(firstValue) ? "Please enter password" : "Please enter the password again")"
-                                Value="@numberLockValue"
-                                OnFinish="HandleNumberLockOnFinish">
-                    </NumberLock>
+                    <GestureUnlock @ref="gestureUnlock"
+                                   Title="@I18n.T(string.IsNullOrEmpty(firstValue) ? "Please draw a pattern" : "Please draw the pattern again")"
+                                   OnFinish="HandleNumberLockOnFinish">
+                    </GestureUnlock>
                 </div>
             </div>
         </div>
     </ScrollContainer>
 </CustomMDialog>
+
