♻️ refactor: Optimize the use of JSModule

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
@@ -32,7 +32,7 @@
     </MToolbar>
 
     <div class="preview-image-dialog__image__wraper">
-        <div id="@id" class="preview-image-dialog__image">
+        <div @ref="elementReference" class="preview-image-dialog__image">
             <img src="@Src" />
         </div>
     </div>
