--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
@@ -44,3 +44,14 @@
         </div>
     </CustomMNavigationDrawer>
 </div>
+
+@code{
+    private string? InternalClass => new CssBuilder()
+            .Add("vditor")
+            .Add("vditor--dark", ThemeService.RealTheme == Shared.Theme.Dark)
+            .Add(Class)
+            .Add("first-line-indent", firstLineIndent)
+            .Add("task-list-line-through", taskListLineThrough)
+            .Add("outline_hide", !Outline)
+            .ToString();
+}
