--- a/src/SwashbucklerDiary.Rcl/Components/Swiper/SwiperTabItems.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/Swiper/SwiperTabItems.razor
@@ -1,4 +1,5 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
+@inherits MyComponentBase
 
 <div @ref="Ref" class="swiper">
     <div class="swiper-wrapper">
