🆕 feat: Add salt to password

--- a/src/SwashbucklerDiary.Rcl/Pages/AppLock.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/AppLock.razor
@@ -34,7 +34,7 @@
                 </div>
             }
 
-            <div class="flex-sm-1 d-flex justify-center align-center flex-column">
+            <div class="flex-sm-1 d-flex justify-center align-center flex-column mb-5 mb-sm-0">
                 @if (HasAppLockExcludeBiometric)
                 {
                     <div class="text--secondary mb-4">@I18n.T("Other unlocking methods") / @I18n.T("Quit")</div>
