🐛 fix: wc-auto-scroll-text too many render

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -67,7 +67,7 @@
         <MCardActions>
             <MButton Text="true"
                      OnClick="() => showAdd = true">
-                <wc-auto-scroll-text fit-content="true" style="max-width:100px;">@(I18n.T("Add"))</wc-auto-scroll-text>
+                <wc-auto-scroll-text style="max-width:100px;">@(I18n.T("Add"))</wc-auto-scroll-text>
             </MButton>
             <MSpacer></MSpacer>
             <MButton Text="true"
