--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
@@ -56,7 +56,7 @@
         <MCardActions>
             <MButton Text="true"
                      OnClick="() => showAddTag = true">
-                <wc-auto-scroll-text fit-content="true" style="max-width:100px;">@(I18n.T("Add tags"))</wc-auto-scroll-text>
+                <wc-auto-scroll-text style="max-width:100px;">@(I18n.T("Add tags"))</wc-auto-scroll-text>
             </MButton>
             <MSpacer></MSpacer>
             <MButton Text="true"
