--- a/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
@@ -72,7 +72,7 @@
                                     </MIcon>
                                 </MListItemIcon>
                                 <MListItemContent Class="text-subtitle-2">
-                                    <wc-auto-scroll-text fit-content="true" style="max-width:200px;">@(I18n.T(item.Text))</wc-auto-scroll-text>
+                                    <wc-auto-scroll-text style="max-width:200px;">@(I18n.T(item.Text))</wc-auto-scroll-text>
                                 </MListItemContent>
                             </MListItem>
                         }
