--- a/src/SwashbucklerDiary.Rcl/Components/ReadWrite/DiaryInfoButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/ReadWrite/DiaryInfoButton.razor
@@ -11,5 +11,5 @@
     <MIcon Class="mr-1" Small>
         @Icon
     </MIcon>
-    <wc-auto-scroll-text fit-content="true" style="max-width:100%;">@Text</wc-auto-scroll-text>
+    <wc-auto-scroll-text style="max-width:100%;">@Text</wc-auto-scroll-text>
 </MButton>
