--- a/src/SwashbucklerDiary.Rcl/Components/Tabs/MyTabs.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/Tabs/MyTabs.razor
@@ -10,7 +10,7 @@
         <MTab @key="item"
               Class="my-tab"
               Ripple="false">
-            <wc-auto-scroll-text fit-content="true" style="max-width: 30vw;">@(I18n.T(item.Text))</wc-auto-scroll-text>
+            <wc-auto-scroll-text style="max-width: 30vw;">@(I18n.T(item.Text))</wc-auto-scroll-text>
         </MTab>
     }
 </MTabs>
