--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiaryInsertTimeFormatDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiaryInsertTimeFormatDialog.razor
@@ -51,7 +51,7 @@
         </MCardText>
         <MCardActions Class="pt-0">
             <MButton Text="true" OnClick="OnReset">
-                <wc-auto-scroll-text fit-content="true" style="max-width:100px;">@(I18n.T("Restore the default"))</wc-auto-scroll-text>
+                <wc-auto-scroll-text style="max-width:100px;">@(I18n.T("Restore the default"))</wc-auto-scroll-text>
             </MButton>
             <MSpacer></MSpacer>
             <MButton Text
