--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
@@ -16,16 +16,16 @@
             </MButton>
         </MCardTitle>
         <MCardSubtitle Class="py-2">
-            @Bytes KB / @TotalBytes KB
+            @InternalTransferredSizeText / @InternalTotalSizeText
         </MCardSubtitle>
          <MCardText>
             <div class="d-flex align-center">
-                <MProgressLinear Value="@Ps"
+                <MProgressLinear Value="@Percentage"
                                  Class="rounded-pill"
                                  Height="10">
                 </MProgressLinear>
                 <span class="text-body-2 ml-2" style="white-space:nowrap;">
-                    @Ps %
+                    @Percentage.ToString("0.00") %
                 </span>
             </div>
         </MCardText>
